# FastFlowLM_JT

.github/workflows/: debian-portable.yml  mirror.yml  ubuntu-build.yml  windows-build.yml
debian/: rules
docs/: _config.yml  index.md  models.md  news.md  team.md
docs/_includes/: footer.html  header.html  hero-home.html
docs/_layouts/: default.html
docs/assets/: styles.css
docs/docs/benchmarks/: qwen3.6_results.md
docs/docs/instructions/: cli.md
docs/docs/instructions/server/: openapi.md  webui.md
docs/docs/models/: gemma.md  lfm.md  nanbeige.md
hrx-integration/: .gitignore  README.md  fetch-hrx-release.ps1  fetch-hrx-release.sh  hrx-release.env
hrx-integration/bench_configs/: bench_16k.json
hrx-integration/patches/: 0001-amdxdna-bounded-spin-then-block-before-blocking-comp.patch  0002-libhrx-add-persistent-map-range-flush-invalidate-buf.patch
hrx-integration/src/: xrt_coreutil_shim.cpp
src/: CMakeLists.txt  CMakePresets.json  flm-wrapper.sh.in  model_list.json
src/common/: utils.cpp
src/common/AutoModel/: automodel.cpp  modeling_gemma3.cpp  modeling_gemma4e.cpp  modeling_gpt_oss.cpp  modeling_lfm2.cpp  modeling_llama3.cpp  modeling_nanbeige.cpp  modeling_qwen2vl.cpp  modeling_qwen3.cpp  modeling_qwen3_5_omni.cpp  modeling_qwen3_5_omni_audio.cpp  modeling_qwen3_5_omni_image.cpp  modeling_qwen3_5vl.cpp  modeling_qwen3_6_moe.cpp  modeling_qwen3vl.cpp
src/common/audio_process_utils/: audioproc.cpp  audioprocAVX512.cpp
src/include/: buffer.hpp  program_args.hpp  prompt_cache.hpp  typedef.hpp
src/include/AutoModel/: all_models.hpp  automodel.hpp  modeling_qwen2vl.hpp  modeling_qwen3_5_omni.hpp  modeling_qwen3_5vl.hpp  modeling_qwen3_6_moe.hpp  modeling_qwen3vl.hpp
src/include/hrx_cpp/: hrx_cpp.hpp  hrx_xadx_builder.hpp
src/include/models/gemma4e/: gemma4e_npu.hpp
src/include/models/qwen3_5_omni/: qwen3_5_omni.hpp
src/include/npu_utils/: npu_instr_utils.hpp  npu_utils.hpp
src/include/utils/: debug_utils.hpp  vm_args.hpp
src/inno/: flm.iss
src/lib/: dequant.lib  dequant_new.lib  gemm.lib  gemma_embedding.lib  gemma_npu.lib  gemma_text_npu.lib  gpt_oss_npu.lib  lfm2_npu.lib  llama_npu.lib  lm_head.lib  mha.lib  nanbeige_npu.lib  phi4_npu.lib  qwen2_npu.lib  qwen2vl_npu.lib  qwen3_5vl_npu.lib  qwen3_npu.lib  qwen3vl_npu.lib  whisper_npu.lib
src/pull/: download_model.cpp  model_downloader.cpp  model_downloader.hpp
src/runner/: runner.cpp  runner.hpp
src/server/: rest_handler.cpp  rest_handler.hpp  streaming_ostream_openai.hpp
src/src/: benchmarking.hpp  main.cpp
src/test/: common.mk
src/test/gemma4e_npu/: test.cpp
src/test/gemma_embedding/: test.cpp
src/test/gemma_npu/: test.cpp
src/test/gemma_text_npu/: test.cpp
src/test/gpt_oss_npu/: test.cpp
src/test/lfm2_npu/: test.cpp
src/test/llama_npu/: test.cpp
src/test/nanbeige_npu/: test.cpp
src/test/phi4_npu/: test.cpp
src/test/qwen2_npu/: test.cpp
src/test/qwen2vl_npu/: test.cpp
src/test/qwen3_5_omni_npu/: Makefile  activate.sh  test.cpp
src/test/qwen3_5vl_npu/: test.cpp
src/test/qwen3_6_moe_npu/: test.cpp
src/test/qwen3_npu/: test.cpp
src/test/qwen3vl_npu/: test.cpp
src/test/whisper_npu/: test.cpp
src/xclbins/Qwen3.6-35B-A3B-NPU2/: layer.xclbin
